# kokoro-web-addon

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  Makefile  README.md  eslint.config.js  package.json  pyproject.toml  tsconfig.json  wxt.config.ts
.github/workflows/: publish.yml
docs/: DEV.md  PRIVACY.md  SETUP.md
src/extension/entrypoints/: background.ts  page-text-extractor.ts
src/extension/entrypoints/offscreen/: index.html  main.ts
src/extension/entrypoints/options/: index.html  main.ts  style.css
src/extension/entrypoints/popup/: index.html  main.ts  style.css
src/extension/entrypoints/shared/: onboarding-ui.ts  read-along-surface.ts  read-along.css  status.css  theme.css  ui.ts
src/extension/entrypoints/sidepanel/: index.html  main.ts  style.css
src/extension/lib/: defaults.ts  extension-client.ts  extension-state.test.ts  extension-state.ts  message-handlers.test.ts  message-handlers.ts  messages.test.ts  messages.ts  onboarding.ts  session-manager.test.ts  session-manager.ts  settings.test.ts  settings.ts  sidebar.ts  voices.ts
src/extension/lib/audio/: audio-player.test.ts  audio-player.ts  local-playback.ts  offscreen-messages.ts  offscreen-playback.ts  playback-controller.ts
src/extension/lib/page-text/: extract-page-text.test.ts  extract-page-text.ts  (+2 more)
src/scripts/: extension-identity.ts  load-env.ts
src/system/: __init__.py  __main__.py  config.py  install.py
src/system/host/: __init__.py  paths.py  protocol.py  state.py  synthesis.py
src/system/tests/: test_install.py  test_model_files.py  test_synthesis.py
(+15 files in other folders)
